fixing links on mobile devices with z index

--- a/src/styles/header.module.scss
+++ b/src/styles/header.module.scss
@@ -127,6 +127,7 @@ button {
 
 a {
     color: white !important;
+    z-index: 11 !important;
 
     &:hover {
         color: white !important;
